--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-3 instructions">
-        <h1>Match Game</h1>
-        <h2>Rules</h2>
-        <p>Click on a card to reveal the number on the other side. Click on a second card to try and find a match to the first. If you succeed, the pair will be removed from play. If not, try again!</p>
-        <h2>How To Win</h2>
-        <p>You win when all pairs have been found.</p>
+      <div class="col-xs-12 col-md-3">
+        <div class="instructions">
+          <h1>Match Game</h1>
+          <h2>Rules</h2>
+          <p>Click on a card to reveal the number on the other side. Click on a second card to try and find a match to the first. If you succeed, the pair will be removed from play. If not, try again!</p>
+          <h2>How To Win</h2>
+          <p>You win when all pairs have been found.</p>
+        </div>
+        <div class="score">
+          <p>Moves: 0</p>
+        </div>
         <div class="restart">
           <button type="button" class="btn btn-primary" disabled=true>Restart</button>
         </div>
